Added rough decimal output, including styling and a clearbutton implementation, also removed unneeded calculation method call that really should have been private in the app

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="previewText">Ax^2 + Bx + C</string>
     <string name="calculate">Calculate</string>
     <string name="clear">Clear</string>
+    <string name="defaultDecimal">0 , 0</string>
 </resources>
