Changed app name in strings.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Quadratic App</string>
+    <string name="app_name">Quadratic Solver</string>
     <string name="aLabel">Input A: </string>
     <string name="bLabel">Input B: </string>
     <string name="cLabel">Input C: </string>
